Fix: Column widths x column gap in tablet and mobile (#1993)
* Fix: remove unwanted animations when resizing columns

* Fix: style rule sprintf percentage variable replacement

* Added row-gap attribute in Columns

* Column gap should be considered when dragging columns

* Added fix for column resizing when there are column gaps used in the columns block

* Adding negative margin on column will now expand the column in desktop

* Fix: updated selectors to only select the block when list view is open

* Column widths not followed when dragging. Fixes #2014

* Fixed column resizer disappears when the columns block is wide or fullwidth. Fixes #2013

--- a/src/block/columns/style.scss
+++ b/src/block/columns/style.scss
@@ -4,3 +4,7 @@
 	min-width: 24px;
 	max-width: none;
 }
+.stk-block-columns > .stk-block-content {
+	--stk-column-gap: 0px; // For nested columns, this takes precedence.
+	column-gap: var(--stk-column-gap, 0px);
+}
