--- a/src/styles/editor-block-transitions.scss
+++ b/src/styles/editor-block-transitions.scss
@@ -25,7 +25,7 @@
 	.stk-block .stk-button::before, // For button animations
 	.stk-block .stk-button::after, // For button animations
 	.stk-block li::marker { // For icon list marker
-		transition: all 0.12s cubic-bezier(0.45, 0.05, 0.55, 0.95), margin 0s;
+		transition: all 0.12s cubic-bezier(0.45, 0.05, 0.55, 0.95), margin 0s, flex 0s, max-width 0s; // Don't include flex & max-width since column widths would animate.
 		border-width: 1px;
 		border-style: none;
 	}
